--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,4 +14,49 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* /////////////////////////////BUTTONS///////////////////////////////////////// */
+.btn-secondary {
+  margin-right: 5px;
+}
+
+
+
+/* ////////////////////////////////LISTS///////////////////////////////////// */
+.list-group-item {
+    position: relative;
+    display: block;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: -1px;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.list-group-item:hover, .list-group-item:focus {
+    z-index: 1;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+.listBox {
+    position: relative;
+    padding: 3em 1em 1em;
+    border: 1px solid #d8d8d8;
+    margin: 1.5rem 0 0;
+}
+
+.listBox::before {
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 1em;
+    color: #aaa;
+    font-size: smaller;
+    font-weight: 500;
+    content: 'Search Results:  Click to add to Inventory.';
 }
