add local Storage to persist the data

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,5 +58,5 @@ code {
     color: #aaa;
     font-size: smaller;
     font-weight: 500;
-    content: 'Search Results:  Click to add to Inventory.';
+    /* content: ; */
 }
