--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,35 @@ code {
     monospace;
 }
 
+/* ////////////////////////////////HOME////////////////////////////////////////// */
+
+body .backgroundImage{
+    background-image: url('./images/Chemicals_in_flasks.jpg') green;
+    /* filter: blur(8px); */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-sizing: border-box;
+    z-index: 1;
+}
+
+/* Position text in the middle of the page/image */
+.bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
 /* /////////////////////////////BUTTONS///////////////////////////////////////// */
 .btn-secondary {
   margin-right: 5px;
@@ -60,3 +89,5 @@ code {
     font-weight: 500;
     /* content: ; */
 }
+
+
