--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,94 @@
-.App {
+
+html {
+  /* height: 100%; */
+  margin: 0;
+  box-sizing: border-box; 
+  /*fixes box sizing issues with Flex, SEE https://css-tricks.com/flexbox-nav-bar-fixed-variable-take-rest-elements/*/
+  font-family: arial;
+  font-size: 1rem;
+  color: black;
+  }
+
+  *, *::before, *::after {
+    box-sizing: border-box;
+}
+
+body {
+  /* height: 100%; */
+  box-sizing: border-box; 
+  margin: 0, 10px;
+  padding: 0, 10px;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5; */
+    
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+.bg-image {
+  height: 100vh;
+  margin: 0;
+  box-sizing: border-box; 
+  background-image: url('./images/Chemicals_in_flasks.jpg');
+  /* filter: blur(8px);  */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-sizing: border-box;
+  z-index: 1;
+}
+
+/* Position text in the middle of the page/image */
+.bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+/* /////////////////////////////BUTTONS///////////////////////////////////////// */
+.btn-secondary {
+  margin-right: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+/* ////////////////////////////////LISTS///////////////////////////////////// */
+.list-group-item {
+    color: black;
+    position: relative;
+    display: block;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: -1px;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.125);
 }
 
-.App-link {
-  color: #61dafb;
+.list-group-item:hover, .list-group-item:focus {
+    z-index: 1;
+    text-decoration: none;
+    cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
