--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,7 @@ code {
   margin: 0;
   box-sizing: border-box; 
   background-image: url('./images/Chemicals_in_flasks.jpg');
-  /* filter: blur(8px);  */
+
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -72,7 +72,7 @@ code {
 
 
 /* ////////////////////////////////LISTS///////////////////////////////////// */
-.list-group-item {
+.list-group-item  h4{
     color: black;
     position: relative;
     display: block;
@@ -80,7 +80,7 @@ code {
     margin-bottom: -1px;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.125);
-}
+  }
 
 .list-group-item:hover, .list-group-item:focus {
     z-index: 1;
@@ -88,7 +88,13 @@ code {
     cursor: pointer;
 }
 
+/* ////////////////////////INPUTS///////////////// */
+
+.search {
+  border: 3px solid  blue;
+  text-align: center;
 
 
+}
 
 
